# nfc-srix-tools

./: CMakeLists.txt  README.md  build.sh  otp_reset.c  read_tag.c  update_countdown.c  write_tag.c
